--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,19 +1,28 @@
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="content/css/main.css">   
+ <link rel="stylesheet" href="content/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="content/css/media-queries.css"> -->
+
+<link rel="stylesheet" href="css/animate.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+<header id="navigation" class="navbar-fixed-top navbar" >
+	<div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" ng-click="vm.toggleNavbar()">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+        	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" ng-click="vm.toggleNavbar()">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <i class="fa fa-bars fa-2x"></i>
             </button>
-            <a class="navbar-brand logo" href="#/" ng-click="vm.collapseNavbar()">
-                <img class="logo-img" src="content/images/logo-jhipster.png" alt="logo"/>
-                <span data-translate="global.title">RegistrationPlatformApp</span> <span class="navbar-version">v{{VERSION}}</span>
+            <a class="navbar-brand" href="#body" ng-click="vm.collapseNavbar()">
+                <h1 id="logo">
+					<img src="content/images/logo.png" alt="RegistrationPlatformApp">
+				</h1>
             </a>
         </div>
-        <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
-            <ul class="nav navbar-nav navbar-right">
+        <nav class="collapse navbar-collapse navbar-right" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()" role="navigation">
+            <ul id="nav" class="nav navbar-nav">
                 <li ui-sref-active="active">
                     <a ui-sref="home" ng-click="vm.collapseNavbar()">
                         <span class="glyphicon glyphicon-home"></span>
@@ -153,6 +162,60 @@
                     </ul>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
-</nav>
+    
+</header>
+
+<section id="slider">
+    	<!-- Indicators -->
+   	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    <ol class="carousel-indicators">
+	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	      <li data-target="#myCarousel" data-slide-to="1"></li>
+	      <li data-target="#myCarousel" data-slide-to="2"></li>
+	    </ol>
+
+	    <!-- Wrapper for slides -->
+	    <div class="carousel-inner">
+	      <div class="item active">
+	        <img src="content/images/jumbotron.jpg" alt="Los Angeles" style="width:100%;">
+	      </div>
+	
+	      <div class="item">
+	        <img src="content/images/jumbotron.jpg" alt="Chicago" style="width:100%;">
+	      </div>
+	    
+	      <div class="item">
+	        <img src="content/images/chicago.jpg" alt="New york" style="width:100%;">
+	      </div>
+	    </div>
+	
+	    <!-- Left and right controls -->
+	    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+	      <span class="glyphicon glyphicon-chevron-left"></span>
+	      <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+	      <span class="glyphicon glyphicon-chevron-right"></span>
+	      <span class="sr-only">Next</span>
+	    </a>
+	    </div>
+  	</section>
+  	 <script src="app/layouts/navbar/bootstrap.min.js"></script>
+  	<script src="app/layouts/navbar/wow.min.js"></script>
+  	<script>
+			var wow = new WOW ({
+				boxClass:     'wow',      // animated element css class (default is wow)
+				animateClass: 'animated', // animation css class (default is animated)
+				offset:       120,          // distance to the element when triggering the animation (default is 0)
+				mobile:       false,       // trigger animations on mobile devices (default is true)
+				live:         true        // act on asynchronously loaded content (default is true)
+			  }
+			);
+			wow.init();
+		</script> 
+  	<script src="app/layouts/navbar/jquery.singlePageNav.min.js"></script>
+  	<script src="app/layouts/navbar/custom.js"></script>
+	<script src="app/layouts/navbar/jquery.fancybox.pack.js"></script>
+    
