--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,11 +1,13 @@
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="content/css/bootstrap.min.css">
 <link rel="stylesheet" href="content/css/main.css">   
- <link rel="stylesheet" href="content/css/bootstrap.min.css">
-<!-- <link rel="stylesheet" href="content/css/media-queries.css"> -->
-
+ 
+<link rel="stylesheet" href="content/css/media-queries.css">
+<!-- <link rel="stylesheet" href="content/css/normalize.min.css"> -->
+<link rel="stylesheet" href="content/css/jquery.fancybox.css">
+<link rel="stylesheet" href="content/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/animate.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 <header id="navigation" class="navbar-fixed-top navbar" >
 	<div class="container">
@@ -203,6 +205,8 @@
 	    </div>
   	</section>
   	 <script src="app/layouts/navbar/bootstrap.min.js"></script>
+<!--   	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+  	 
   	<script src="app/layouts/navbar/wow.min.js"></script>
   	<script>
 			var wow = new WOW ({
