--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -6,7 +6,7 @@
 <!-- <link rel="stylesheet" href="content/css/normalize.min.css"> -->
 <link rel="stylesheet" href="content/css/jquery.fancybox.css">
 <link rel="stylesheet" href="content/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="content/css/animate.css">
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 <header id="navigation" class="navbar-fixed-top navbar" >
@@ -19,7 +19,7 @@
             </button>
             <a class="navbar-brand" href="#body" ng-click="vm.collapseNavbar()">
                 <h1 id="logo">
-					<img src="content/images/logo.png" alt="RegistrationPlatformApp">
+					<img src="content/images/limaelimao-trans-logo.png" alt="RegistrationPlatformApp">
 				</h1>
             </a>
         </div>
