--- a/src/main/webapp/scss/main.scss
+++ b/src/main/webapp/scss/main.scss
@@ -181,8 +181,8 @@ body > section,
 .navbar-nav li a:focus,
 .navbar-nav li a:hover {
 	background-color: transparent;
-	border-top: 1px solid #32B0EE;
-	color: #fff;
+	
+	color: #1ea78d;
 }
 
 
