--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,13 +1,17 @@
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="content/css/font-awesome.min.css">
 <link rel="stylesheet" href="content/css/bootstrap.min.css">
-<link rel="stylesheet" href="content/css/main.css">   
- 
+
+ <link rel="stylesheet" href="content/css/jquery.fancybox.css">
+ <link rel="stylesheet" href="content/css/animate.css">
+ <link rel="stylesheet" href="content/css/main.css">   
 <link rel="stylesheet" href="content/css/media-queries.css">
 <!-- <link rel="stylesheet" href="content/css/normalize.min.css"> -->
-<link rel="stylesheet" href="content/css/jquery.fancybox.css">
-<link rel="stylesheet" href="content/css/font-awesome.min.css">
-<link rel="stylesheet" href="content/css/animate.css">
+
+
+
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+
 
 <header id="navigation" class="navbar-fixed-top navbar" >
 	<div class="container">
@@ -43,6 +47,36 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu" uib-dropdown-menu>
+                        <li ui-sref-active="active">
+                                <a ui-sref="person-my-suffix" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.personMySuffix">Person My Suffix</span>
+                                </a>
+                            </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="location-my-suffix" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.locationMySuffix">Location My Suffix</span>
+                                </a>
+                            </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="event-notification-my-suffix" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.eventNotificationMySuffix">Event Notification My Suffix</span>
+                                </a>
+                            </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="event-type-my-suffix" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.eventTypeMySuffix">Event Type My Suffix</span>
+                                </a>
+                            </li>
+                        <li ui-sref-active="active">
+                                <a ui-sref="event-my-suffix" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.eventMySuffix">Event My Suffix</span>
+                                </a>
+                            </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
@@ -179,35 +213,90 @@
 	    </ol>
 
 	    <!-- Wrapper for slides -->
-	    <div class="carousel-inner">
+	    <div class="carousel-inner" >
 	      <div class="item active">
-	        <img src="content/images/jumbotron.jpg" alt="Los Angeles" style="width:100%;">
+	      	<img src="content/images/jumbotron.jpg" alt="Chicago" style="width:100%;" class="img-responsive">
+	      	<div class="container">
+		        <div class="carousel-caption">
+					<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Registration<span> PLATFORM</span>!</h2>
+					<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">teste</span> pagina teste.</h3>
+					<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals</p>
+					
+					<ul class="social-links text-center">
+						<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
+						<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
+						<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
+						<li><a href=""><i class="fa fa-dribbble fa-lg"></i></a></li>
+					</ul>
+				</div>
+			</div>
 	      </div>
 	
 	      <div class="item">
-	        <img src="content/images/jumbotron.jpg" alt="Chicago" style="width:100%;">
+	        <img src="content/images/jumbotron.jpg" alt="asee" style="width:100%;" class="img-responsive">
+	        <div class="container">
+	        <div class="carousel-caption">
+				<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Registration<span> PLATFORM</span>!</h2>
+				<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">teste</span> pagina teste.</h3>
+				<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals</p>
+				
+				<ul class="social-links text-center">
+					<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-dribbble fa-lg"></i></a></li>
+				</ul>
+			</div>
+			</div>
 	      </div>
 	    
 	      <div class="item">
-	        <img src="content/images/chicago.jpg" alt="New york" style="width:100%;">
-	      </div>
+	        <img src="content/images/chicago.jpg" alt="New york" style="width:100%;" class="img-responsive">
+	        <div class="container">
+	        <div class="carousel-caption">
+				<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Registration<span> PLATFORM</span>!</h2>
+				<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">teste</span> pagina teste.</h3>
+				<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals</p>
+				
+				<ul class="social-links text-center">
+					<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
+					<li><a href=""><i class="fa fa-dribbble fa-lg"></i></a></li>
+				</ul>
+			</div>
+			</div>
+	       </div>
 	    </div>
 	
 	    <!-- Left and right controls -->
-	    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-	      <span class="glyphicon glyphicon-chevron-left"></span>
-	      <span class="sr-only">Previous</span>
-	    </a>
-	    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-	      <span class="glyphicon glyphicon-chevron-right"></span>
-	      <span class="sr-only">Next</span>
-	    </a>
+<!-- 	    <a class="left carousel-control" href="#myCarousel" data-slide="prev"> -->
+<!-- 	      <span class="glyphicon glyphicon-chevron-left"></span> -->
+<!-- 	      <span class="sr-only">Previous</span> -->
+<!-- 	    </a> -->
+<!-- 	    <a class="right carousel-control" href="#myCarousel" data-slide="next"> -->
+<!-- 	      <span class="glyphicon glyphicon-chevron-right"></span> -->
+<!-- 	      <span class="sr-only">Next</span> -->
+<!-- 	    </a> -->
 	    </div>
   	</section>
-  	 <script src="app/layouts/navbar/bootstrap.min.js"></script>
+  	 
 <!--   	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
   	 
-  	<script src="app/layouts/navbar/wow.min.js"></script>
+	<script src="app/layouts/navbar/jquery-1.11.1.min.js"></script>
+	<script src="app/layouts/navbar/jquery.singlePageNav.min.js"></script>
+<script src="app/layouts/navbar/bootstrap.min.js"></script>
+<script src="app/layouts/navbar/jquery.fancybox.pack.js"></script>
+<!-- jquery.mixitup.min -->
+      <script src="app/layouts/navbar/jquery.mixitup.min.js"></script> 
+<!-- jquery.parallax -->
+      <script src="app/layouts/navbar/jquery.parallax-1.1.3.js"></script>
+<!-- jquery.countTo -->
+      <script src="app/layouts/navbar/jquery-countTo.js"></script>
+<!-- jquery.appear -->
+      <script src="app/layouts/navbar/jquery.appear.js"></script>
+      <script src="app/layouts/navbar/jquery.easing.min.js"></script>
+<script src="app/layouts/navbar/wow.min.js"></script>
   	<script>
 			var wow = new WOW ({
 				boxClass:     'wow',      // animated element css class (default is wow)
@@ -219,7 +308,6 @@
 			);
 			wow.init();
 		</script> 
-  	<script src="app/layouts/navbar/jquery.singlePageNav.min.js"></script>
+  	
   	<script src="app/layouts/navbar/custom.js"></script>
-	<script src="app/layouts/navbar/jquery.fancybox.pack.js"></script>
     
